--- a/code/05_figures-and-correlations.rmd
+++ b/code/05_figures-and-correlations.rmd
@@ -68,14 +68,14 @@ ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type, linetype 
                      minor_breaks = NULL) +
   scale_linetype_manual(name = "Effect type", 
                         values = c( "dotdash", "dotted", "solid", "dashed"),
-                        breaks = "Fisher's z", "Cohen's q", "MD", "SMD") + 
+                        breaks = c("Fisher's z", "Cohen's q", "MD", "SMD")) + 
   scale_color_brewer(name = "Effect type", 
                      palette = "Dark2", 
                      breaks = c("Fisher's z", "Cohen's q", "MD", "SMD")) +
   coord_cartesian(ylim = c(0, 100)) +
   theme(legend.position = c(0.8, 0.4),
         legend.background = element_rect(linetype = "solid", color = "black")) +
-  guides(color = guide_legend(override.aes = list(size = 1.4)))
+  guides(color = guide_legend(override.aes = list(size = 1.2)))
   
 
 # ggsave("../figures/tau-I2.png", dpi = 600, height =  4 , width = 6.47)
